update year