@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2022 TruthBean(Rogar·Q)
+ * Copyright (c) 2023 TruthBean(Rogar·Q)
  * Debbie is licensed under Mulan PSL v2.
  * You can use this software according to the terms and conditions of the Mulan PSL v2.
  * You may obtain a copy of Mulan PSL v2 at:
@@ -20,7 +20,7 @@ public class Test {
         System.out.println(Integer.toBinaryString(Integer.MAX_VALUE));
         Character c = '中';
         Integer i = 10;
-        Integer j = new Integer(10);
+        Integer j = Integer.valueOf(10);
         Integer x = Integer.valueOf(10);
         System.out.println(i == j);
         System.out.println(i == x);
